<resources>
    <string name="app_name">Health monitoring system</string>
    <string name="textViewHeader">Комплексная система мониторинга здоровья.\nАвтор: Денис Логинов. (с) 2019</string>
    <string name="textViewFIO">ФИО:</string>
    <string name="textViewAge">Возраст:</string>

    <string name="buttonSave">Сохранить</string>
    <string name="buttonPressure">Показатели давления</string>
    <string name="buttonHealthIndicator">Показатели здоровья</string>

    <string name="textViewPressure">Показатели давления</string>
    <string name="textViewHealthIndicator">Показатели здоровья</string>
    <string name="inputFIO">Введите ваше ФИО</string>
    <string name="inputAge">Введите ваш возраст</string>
    <string name="inputUpPressure">Введите верхнее давление</string>
    <string name="inputDownPressure">Введите нижнее давление</string>
    <string name="inputPulse">Введите пульс</string>
    <string name="inputTachycardia">Тахикардия</string>
    <string name="inputDate">Введите дату измерений</string>
    <string name="inputWeight">Введите ваш вес в кг</string>
    <string name="inputSteps">Введите количество шагов</string>




</resources>
